<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <include layout="@layout/fragment_header"/>
    
    
    <ImageView
        android:id="@+id/helpimage"
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dip"
        android:background="@drawable/icon"
        android:contentDescription="@string/app_name" >
    </ImageView>

    <TextView
        android:id="@+id/helpText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/helpimage"
        android:layout_centerHorizontal="true"
        android:text="" >
    </TextView>

    <TextView
        android:id="@+id/helpText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/helpText1"
        android:layout_centerHorizontal="true"
        android:text="@string/help_text1" >
    </TextView>
     <TextView
        android:id="@+id/helpText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/helpText2"
        android:layout_centerHorizontal="true"
        android:text="@string/help_text2" >
    </TextView>

</RelativeLayout>