<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/right_mainPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/oper_title2"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/right_menu_main"
                android:textColor="#000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:background="@drawable/booklist_menu_bg_unit2"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/menu_baseinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:clickable="true"
            android:orientation="vertical"
            android:padding="5dip" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:src="@drawable/right_menu_baseinfo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/right_menu_1"
                android:textColor="#000" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_dynamic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:clickable="true"
            android:orientation="vertical"
            android:padding="5dip" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:src="@drawable/right_menu_dynamic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/right_menu_2"
                android:textColor="#000" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:clickable="true"
            android:orientation="vertical"
            android:padding="5dip" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:src="@drawable/right_menu_message" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/right_menu_3"
                android:textColor="#000" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_social"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:clickable="true"
            android:orientation="vertical"
            android:padding="5dip" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:src="@drawable/right_menu_social" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/right_menu_4"
                android:textColor="#000" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_at"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:clickable="true"
            android:orientation="vertical"
            android:padding="5dip" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:src="@drawable/right_menu_setting" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/right_menu_5"
                android:textColor="#000" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>